[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'my_id'
version = '1.0.2'
description = ''
authors = [
    { name = 'Садовский М.К.', email = 'i@maxim-sadovskiy.ru' }
]
license = { text = 'Apache-2.0' }
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    'pydantic>=2.5.0'
]

[project.urls]
Homepage = 'https://github.com/Sam-Strand/my_id_py'
